@@ -37,6 +37,8 @@ Avro 1.6.0 (unreleased)
 
     AVRO-853: Java: Cache Schema hash codes. (cutting)
 
+    AVRO-907. Java: Optimize access to protobuf message fields. (cutting)
+
   IMPROVEMENTS
 
     AVRO-836. Python "avro" commandline utility to display and write Avro files.
